Added missing files

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@ data/peerserv-mysql-data
 data/database.sqlite
 .env
 .DS_Store
-docker-compose.yml
+# docker-compose.yml
 dispatch.yaml
 yarn-error.log
 yarn.lock
-public/index.html
+# public/index.html
 app.production.yaml
 app.staging.yaml
 
