--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,3 +39,6 @@ jobs:
       - uses: google-github-actions/deploy-cloudrun@v0
         with:
           metadata: "service.${{ env.CURRENT_BRANCH }}.yaml"
+      - name: Set Min Instances and Enable CPU Boost
+        run: |
+          gcloud run services update ${{ env.CURRENT_BRANCH =='production' && 'prod-peerserv' || 'staging-peerserv' }} --min-instances=1 --cpu-boost --region=us-central1
